5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1636_2729.log
== TEST (2019-05-16 21:51:26) 
-- CODE:
a = int(input("numero a: "))
b = int(input("numero b: "))
c = a * b
if (c / 2)==0:
	print(a + b):
else:
	print(b - a)
-- ERROR:
File "XXXX", line 5
    print(a + b):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:53:04) 
-- CODE:
a = int(input("numero a: "))
b = int(input("numero b: "))
c = a * b
d = c / 2
if (d % 0):
	print(a + b):
else:
	print(b - a)
-- ERROR:
File "XXXX", line 6
    print(a + b):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:53:19) 
-- CODE:
a = int(input("numero a: "))
b = int(input("numero b: "))
c = a * b
d = c / 2
if (d % 0):
	print(a + b)
else:
	print(b - a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (d % 0):
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:54:07) 
-- CODE:
a = int(input("numero a: "))
b = int(input("numero b: "))
c = a * b

if (c % 2 == 0):
	print(a + b)
else:
	print(b - a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 21:54:31) 
-- CODE:
a = int(input("numero a: "))
b = int(input("numero b: "))
c = a * b

if (c % 2 == 0):
	print(a + b)
else:
	print(b - a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 21:54:42) 
-- CODE:
a = int(input("numero a: "))
b = int(input("numero b: "))
c = a * b

if (c % 2 == 0):
	print(a + b)
else:
	print(b - a)
-- EXECUTION TIME:
0.261827
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
